--- a/publications_en.bib
+++ b/publications_en.bib
@@ -6,7 +6,16 @@
 
 }
 
-
+@ARTICLE{costas2016axial,
+  author = {Costas, M. and Morin, D. and Langseth, M. and Romera, L. and D{\'\i}az,
+  J.},
+  title = {Axial crushing of aluminum extrusions filled with {PET} foam and {GFRP}.
+  {A}n experimental investigation},
+  journal = {Thin-Walled Structures},
+  year = {2016},
+  volume = {99},
+  pages = {45--57},
+}
 
 @article{paz2015size,
   title={Size and shape optimization of aluminum tubes with {GFRP} honeycomb reinforcements for crashworthy aircraft structures},
@@ -15,7 +24,6 @@
   volume={133},
   pages={499--507},
   year={2015},
-  publisher={Elsevier}
 }
 
 @article{montoya2015multi,
