--- a/CV-en.tex
+++ b/CV-en.tex
@@ -49,7 +49,7 @@
 
 \section{Education}
  % Los argumentos del 3 al 6 pueden permanecer vacios
- \cventry{2011--Present}{[Currently] PhD. in Civil Engineering, area of Continuum Mechanics and Structural Theory}{School of Civil Engineering}{University of A Coru\~na}{}{PhD. topic: \textit{Computational modeling and structural optimization of multi-material impact absorbers.} Research stay at SIMLab (NTNU) during six months, granted by Fundaci\'on Barri\'e.} 
+ \cventry{2011--2016}{PhD. in Civil Engineering, area of Continuum Mechanics and Structural Theory}{School of Civil Engineering}{University of A Coru\~na}{}{PhD. topic: \textit{Computational modeling and structural optimization of multi-material impact absorbers.} Research stay at SIMLab (NTNU) during six months, granted by Fundaci\'on Barri\'e. Maximum qualification and awarded \emph{cum laude}.}
 \cventry{2005--2010}{MEng. in Civil Engineering (Ingeniero de Caminos, Canales y Puertos)}{School of Civil Engineering}{University of A Coru\~na}{}{Number 11 of 95 in class. Erasmus exchange program at Syddansk Universitet (Odense, Denmark).}
 \cventry{2005}{Professional degree in Music}{Conservatory of Santiago de Compostela}{}{}{Specialization in piano and music analysis.}
 
@@ -110,7 +110,7 @@ Computational modeling of GFRP sheet-pile walls.}
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
 \section{Scientific advisory}
-\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Journal of Reinforced Plastics and Composites} and \emph{Engineering Optimization}.}
+\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials \& Design}, \emph{Journal of Reinforced Plastics and Composites} and \emph{Engineering Optimization}.}
 \end{document}
 
 
