--- a/CV-gl.tex
+++ b/CV-gl.tex
@@ -88,10 +88,6 @@ Modelado e an\'alise computacional de tablestacas de fibra de vidro.}
 
 % Las publicaciones tomadas de un archivo de BibTeX sin usar multibib\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}
 
-\section{Patentes}
-\cvlistitem{Patente espa\~nola ES 2-386-269-B1: "Sitema h\'ibrido metal-composite para absorci\'on de energ\'ia en choque". Autores: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (Universidade da Coru\~na, UDC). 11 de xullo de 2013.}
-
-
 
 \nocite{*}
 \bibliographystyle{unsrt}
@@ -107,6 +103,20 @@ Modelado e an\'alise computacional de tablestacas de fibra de vidro.}
 %\bibliographymisc{publications}              % 'publications' es el nombre del archivo BibTeX
 
 %\clearpage\end{CJK*}                          % si esta redactando su CV en chino usando CJK, \clearpage es requerido por fancyhdr para que funcione correctamente con CJK, aunque esto eliminara la numeracion de pagina al dejar \lastpage como no definido
+
+\section{Participaci\'on en proxectos e contratos de investigaci\'on}
+\cvlistitem{[Proxecto europeo] FP7-AAT-2007-RTD-1. MAAXIMUS: More affordable Aircraft Structure through Extended, Integrated and Mature Numerical Sizing, UE, 03/2008-03/2013.}
+\cvlistitem{[Proxecto nacional] UNCL13-1E-2123. T\'unel de viento de capa l\'imite para aplicaciones de ingenier\'ia civil y aeron\'autica. Ministerio de Econom\'ia y Competitividad.}
+\cvlistitem{[Proxecto nacional] DPI 2013-41893-R. OPTOPAER. Optimizaci\'on probabilista topol\'ogica y topom\'etrica de estructuras aeron\'auticas en r\'egimen lineal y no lineal. Ministerio de Econom\'ia y Competitividad.}
+\cvlistitem{[Proxecto auton\'omico] 09DPI-011118PR INCITE 2009. Dese\~no \'optimo de estruturas e compo\~nentes automobil\'isticos con materiais met\'aicos e compostos. Conseller\'ia de Econom\'ia e Industria.}
+\cvlistitem{[Proxecto auton\'omico] 10DPI025CT. Hybrid-Body: optimizaci\'on estructural de un sistema h\'ibrido para absorci\'on de energ\'ia en choque frontal con comprobaci\'on experimental y computacional. Conseller\'ia de Econom\'ia e Industria.}
+\cvlistitem{[Proxecto auton\'omico] GRC2013-056. Grupo de Referencia Competitiva. Conseller\'ia de Cultura, Educaci\'on e Ordenaci\'on Universitaria.}
+\cvlistitem{[Contrato con empresa] DURAPORT. Nuevas tecnolog\'ias para la construcci\'on de infraestructuras portuarias durables: ref. 407. ACCIONA infraestructuras, 2011.}
+
+\section{Patentes}
+\cvlistitem{Patente espa\~nola ES 2-386-269-B1: "Sitema h\'ibrido metal-composite para absorci\'on de energ\'ia en choque". Autores: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (Universidade da Coru\~na, UDC). 11 de xullo de 2013.}
+
+
 \section{Estad\'ias de investigaci\'on}
 \cvlistitem{Estancia de investigaci\'on dende o 1/10/2014 ao 1/4/2015 (seis meses) no Structural Impact Laboratory (NTNU, Norway), baixo a direcci\'on dos profesores Magnus Langseth e David Morin.}
 
