--- a/CV-gl.tex
+++ b/CV-gl.tex
@@ -21,6 +21,7 @@
 % ajustes para los margenes de pagina
 \usepackage[scale=0.87]{geometry}
 %\setlength{\hintscolumnwidth}{3cm}           % si desea cambiar el ando de la columna para las fechas
+\usepackage{textcomp}
 
 % datos personales
 \firstname{Miguel}
@@ -105,13 +106,16 @@ Modelado e an\'alise computacional de tablestacas de fibra de vidro.}
 %\clearpage\end{CJK*}                          % si esta redactando su CV en chino usando CJK, \clearpage es requerido por fancyhdr para que funcione correctamente con CJK, aunque esto eliminara la numeracion de pagina al dejar \lastpage como no definido
 
 \section{Participaci\'on en proxectos e contratos de investigaci\'on}
-\cvlistitem{[Proxecto europeo] FP7-AAT-2007-RTD-1. MAAXIMUS: More affordable Aircraft Structure through Extended, Integrated and Mature Numerical Sizing, UE, 03/2008-03/2013.}
-\cvlistitem{[Proxecto nacional] UNCL13-1E-2123. T\'unel de viento de capa l\'imite para aplicaciones de ingenier\'ia civil y aeron\'autica. Ministerio de Econom\'ia y Competitividad.}
-\cvlistitem{[Proxecto nacional] DPI 2013-41893-R. OPTOPAER. Optimizaci\'on probabilista topol\'ogica y topom\'etrica de estructuras aeron\'auticas en r\'egimen lineal y no lineal. Ministerio de Econom\'ia y Competitividad.}
-\cvlistitem{[Proxecto auton\'omico] 09DPI-011118PR INCITE 2009. Dese\~no \'optimo de estruturas e compo\~nentes automobil\'isticos con materiais met\'aicos e compostos. Conseller\'ia de Econom\'ia e Industria.}
-\cvlistitem{[Proxecto auton\'omico] 10DPI025CT. Hybrid-Body: optimizaci\'on estructural de un sistema h\'ibrido para absorci\'on de energ\'ia en choque frontal con comprobaci\'on experimental y computacional. Conseller\'ia de Econom\'ia e Industria.}
-\cvlistitem{[Proxecto auton\'omico] GRC2013-056. Grupo de Referencia Competitiva. Conseller\'ia de Cultura, Educaci\'on e Ordenaci\'on Universitaria.}
-\cvlistitem{[Contrato con empresa] DURAPORT. Nuevas tecnolog\'ias para la construcci\'on de infraestructuras portuarias durables: ref. 407. ACCIONA infraestructuras, 2011.}
+\cvlistitem{[Proxecto europeo] FP7-AAT-2007-RTD-1. MAAXIMUS: More affordable Aircraft Structure through Extended, Integrated and Mature Numerical Sizing, UE, 03/2008-03/2013. Duraci\'on: anos 2011-2015. Presuposto: 370000 \texteuro.}
+\cvlistitem{[Proxecto nacional] UNCL13-1E-2123. T\'unel de viento de capa l\'imite para aplicaciones de ingenier\'ia civil y aeron\'autica. Ministerio de Econom\'ia y Competitividad. Duraci\'on: ano 2014. Presuposto: 325000 \texteuro.}
+\cvlistitem{[Proxecto nacional] DURAPORT. Nuevas tecnolog\'ias para la construcci\'on de infraestructuras portuarias durables. CDTI, programa FEDER-INTERCONECTA, Ministerio de Econom\'ia y Competitividad, ref. 407.Duraci\'on: anos 2011-2012. Presuposto: 40000 \texteuro.}
+\cvlistitem{[Proxecto nacional] DPI 2013-41893-R. OPTOPAER. Optimizaci\'on probabilista topol\'ogica y topom\'etrica de estructuras aeron\'auticas en r\'egimen lineal y no lineal. Ministerio de Econom\'ia y Competitividad. Duraci\'on: anos 2014-2016. Presuposto: 53240 \texteuro.}
+\cvlistitem{[Proxecto auton\'omico] 09DPI-011118PR INCITE 2009. Dese\~no \'optimo de estruturas e compo\~nentes automobil\'isticos con materiais met\'aicos e compostos. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: anos 2009-2012.}
+\cvlistitem{[Proxecto auton\'omico] 10DPI025CT. Hybrid-Body: optimizaci\'on estructural de un sistema h\'ibrido para absorci\'on de energ\'ia en choque frontal con comprobaci\'on experimental y computacional. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: anos 2010-2012. Presuposto: 46000 \texteuro.}
+\cvlistitem{[Proxecto auton\'omico] GRC2013-056. Grupo de Referencia Competitiva. Conseller\'ia de Cultura, Educaci\'on e Ordenaci\'on Universitaria. Duraci\'on: anos 2013-2016. Presuposto: 259000 \texteuro.}
+\cvlistitem{[Contratos de investigaci\'o con empresas] Con Puentes y Calzadas: C\'alculo s\'ismico en teor\'ia lineal y no lineal del puente sobre el r\'io Chiche en Ecuador. Ref. 443. Duraci\'on: ano 2013.}
+\cvlistitem{[Contratos de investigaci\'o con empresas] Con AIRBUS: Optimization study of rear fuselage. Duraci\'on: ano 2015.}
+\cvlistitem{[Contratos de investigaci\'o con empresas] Con AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Duraci\'on: ano 2016.}
 
 \section{Patentes}
 \cvlistitem{Patente espa\~nola ES 2-386-269-B1: "Sitema h\'ibrido metal-composite para absorci\'on de energ\'ia en choque". Autores: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (Universidade da Coru\~na, UDC). 11 de xullo de 2013.}
