--- a/CV-gl.tex
+++ b/CV-gl.tex
@@ -110,19 +110,22 @@ Modelado e an\'alise computacional de tablestacas de fibra de vidro.}
 \cvlistitem{[Proxecto nacional] UNCL13-1E-2123. T\'unel de viento de capa l\'imite para aplicaciones de ingenier\'ia civil y aeron\'autica. Ministerio de Econom\'ia y Competitividad. Duraci\'on: ano 2014. Presuposto: 325000 \texteuro.}
 \cvlistitem{[Proxecto nacional] DURAPORT. Nuevas tecnolog\'ias para la construcci\'on de infraestructuras portuarias durables. CDTI, programa FEDER-INTERCONECTA, Ministerio de Econom\'ia y Competitividad, ref. 407.Duraci\'on: anos 2011-2012. Presuposto: 40000 \texteuro.}
 \cvlistitem{[Proxecto nacional] DPI 2013-41893-R. OPTOPAER. Optimizaci\'on probabilista topol\'ogica y topom\'etrica de estructuras aeron\'auticas en r\'egimen lineal y no lineal. Ministerio de Econom\'ia y Competitividad. Duraci\'on: anos 2014-2016. Presuposto: 53240 \texteuro.}
-\cvlistitem{[Proxecto auton\'omico] 09DPI-011118PR INCITE 2009. Dese\~no \'optimo de estruturas e compo\~nentes automobil\'isticos con materiais met\'aicos e compostos. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: anos 2009-2012.}
+\cvlistitem{[Proxecto auton\'omico] 09DPI-011118PR INCITE 2009. Dese\~no \'optimo de estruturas e compo\~nentes automobil\'isticos con materiais met\'alicos e compostos. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: anos 2009-2012. Presuposto: 45000 \texteuro.}
 \cvlistitem{[Proxecto auton\'omico] 10DPI025CT. Hybrid-Body: optimizaci\'on estructural de un sistema h\'ibrido para absorci\'on de energ\'ia en choque frontal con comprobaci\'on experimental y computacional. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: anos 2010-2012. Presuposto: 46000 \texteuro.}
 \cvlistitem{[Proxecto auton\'omico] GRC2013-056. Grupo de Referencia Competitiva. Conseller\'ia de Cultura, Educaci\'on e Ordenaci\'on Universitaria. Duraci\'on: anos 2013-2016. Presuposto: 259000 \texteuro.}
-\cvlistitem{[Contratos de investigaci\'o con empresas] Con Puentes y Calzadas: C\'alculo s\'ismico en teor\'ia lineal y no lineal del puente sobre el r\'io Chiche en Ecuador. Ref. 443. Duraci\'on: ano 2013.}
-\cvlistitem{[Contratos de investigaci\'o con empresas] Con AIRBUS: Optimization study of rear fuselage. Duraci\'on: ano 2015.}
-\cvlistitem{[Contratos de investigaci\'o con empresas] Con AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Duraci\'on: ano 2016.}
+\cvlistitem{[Contratos de investigaci\'on con empresas] Con Puentes y Calzadas: C\'alculo s\'ismico en teor\'ia lineal y no lineal del puente sobre el r\'io Chiche en Ecuador. Ref. 443. Duraci\'on: ano 2013.}
+\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Optimization study of rear fuselage. Duraci\'on: ano 2015.}
+\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Duraci\'on: ano 2015.}
 
 \section{Patentes}
 \cvlistitem{Patente espa\~nola ES 2-386-269-B1: "Sitema h\'ibrido metal-composite para absorci\'on de energ\'ia en choque". Autores: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (Universidade da Coru\~na, UDC). 11 de xullo de 2013.}
 
 
 \section{Estad\'ias de investigaci\'on}
-\cvlistitem{Estancia de investigaci\'on dende o 1/10/2014 ao 1/4/2015 (seis meses) no Structural Impact Laboratory (NTNU, Norway), baixo a direcci\'on dos profesores Magnus Langseth e David Morin.}
+\cvlistitem{Estad\'ia de investigaci\'on predoutoral dende o 1/10/2014 ao 1/4/2015 (seis meses) no Structural Impact Laboratory (NTNU, Norway), baixo a direcci\'on dos profesores Magnus Langseth e David Morin.}
+
+\section{Reco\~necementos e premios}
+\cvlistitem{Becario da Fundaci\'on Barri\'e na convocatoria de becas de posgrao 2014 para a realizaci\'on dunha estad\'ia predoutoral na NTNU (Noruega).}
 
 \section{Asesoramento cient\'ifico}
 \cvlistitem{Revisor das revistas JCR \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites} e \emph{Engineering Optimization}.}
