--- a/CV-gl.tex
+++ b/CV-gl.tex
@@ -62,7 +62,7 @@ Modelado e an\'alise computacional de tablestacas de fibra de vidro.}
 \cventry{Ver\'an de 2009}{Estancia en pr\'acticas}{Autoridade Portuaria de Vilagarc\'ia de Arousa (Puertos del Estado)}{}{}{Tarefas de apoio na Direcci\'on de Infraestruturas.}
 
 \section{Experiencia docente}
-\cventry{Curso 2015-2016}{Profesor da materia 'C\'alculo Avanzado de Estruturas' no M\'aster en Enxe\~ner\'ia de Estruturas e Materiais Aeroespaciais, título propio da UDC.}{ETSECCP, UDC}{}{}{}
+\cventry{Curso 2015-2016}{Profesor da materia 'C\'alculo Avanzado de Estruturas' no M\'aster en Enxe\~ner\'ia de Estruturas e Materiais Aeroespaciais, t\'itulo propio da UDC.}{ETSECCP, UDC}{}{}{}
 \cventry{Curso 2013-2014}{Asistencia nas pr\'acticas da materia 'Pontes 1'}{ETSECCP, UDC}{}{}{}
 
 \section{Idiomas}
