--- a/CV-es.tex
+++ b/CV-es.tex
@@ -19,7 +19,7 @@
 %\usepackage{CJKutf8}                         % si necesita usa CJK para redactar su CV en chino, japones o coreano
 
 % ajustes para los margenes de pagina
-\usepackage[scale=0.87]{geometry}
+\usepackage[scale=0.9]{geometry}
 %\setlength{\hintscolumnwidth}{3cm}           % si desea cambiar el ando de la columna para las fechas
 \usepackage{textcomp}
 
@@ -74,7 +74,7 @@ Modelado y an\'alisis computacional de tablestacas de fibra de vidrio.}
 \cvitemwithcomment{Noruego}{Habilidades b\'asicas}{Certificado oficial A1 (Bokm\r{a}l)}
 
 \section{Conocimientos de computaci\'on}
-\cvitem{An\'alisis estructural}{An\'alisis estructural con Abaqus Standard y Explicit. Conocimientos avanzados de simulaciones de choque con m\'etodo expl\'icito, incluyendo plasticidad y fractura en metales y materiales compuestos, contactos, uniones, etc. Experiencia con scripts de Python para pre- y post-proceso. Otros paquetes: ANSYS, SAP2000, Cosmos/M.D. Conocimientos avanzados de mec\'anica de medios continuos computacional.}
+\cvitem{An\'alisis estructural}{An\'alisis estructural con Abaqus Standard y Explicit. Conocimientos avanzados de simulaciones de choque con m\'etodo expl\'icito, incluyendo plasticidad y fractura en metales y materiales compuestos, contactos, uniones, etc. Experiencia con scripts de Python para pre- y post-proceso. Otros paquetes: ANSYS, SAP2000, Cosmos/M. Conocimientos avanzados de mec\'anica de medios continuos computacional.}
 \cvitem{Paquetes de optimizaci\'on}{Experiencia en optimizaci\'on estructural de elementos de absocri\'on de impactos utilizando diferentes bibliotecas de optimizaci\'on como DOT, SCOLIB, CONMIN, OPT++ y JEGA. Paquete Surfpack para metamodelado.}
 \cvitem{CAD}{Autocad}
 \cvitem{Programaci\'on}{Python, Fortran, Bash}
@@ -106,16 +106,16 @@ Modelado y an\'alisis computacional de tablestacas de fibra de vidrio.}
 %\clearpage\end{CJK*}                          % si esta redactando su CV en chino usando CJK, \clearpage es requerido por fancyhdr para que funcione correctamente con CJK, aunque esto eliminara la numeracion de pagina al dejar \lastpage como no definido
 
 \section{Participaci\'on en proyectos y contratos de investigaci\'on}
-\cvlistitem{[Proyecto europeo] FP7-AAT-2007-RTD-1. MAAXIMUS: More affordable Aircraft Structure through Extended, Integrated and Mature Numerical Sizing, UE, 03/2008-03/2013. Duraci\'on: años 2011-2015. Importe: 370000 \texteuro.}
-\cvlistitem{[Proyecto nacional] UNCL13-1E-2123. T\'unel de viento de capa l\'imite para aplicaciones de ingenier\'ia civil y aeron\'autica. Ministerio de Econom\'ia y Competitividad. Duraci\'on: ano 2014. Importe: 325000 \texteuro.}
-\cvlistitem{[Proyecto nacional] DURAPORT. Nuevas tecnolog\'ias para la construcci\'on de infraestructuras portuarias durables. CDTI, programa FEDER-INTERCONECTA, Ministerio de Econom\'ia y Competitividad, ref. 407.Duraci\'on: años 2011-2012. Importe: 40000 \texteuro.}
-\cvlistitem{[Proyecto nacional] DPI 2013-41893-R. OPTOPAER. Optimizaci\'on probabilista topol\'ogica y topom\'etrica de estructuras aeron\'auticas en r\'egimen lineal y no lineal. Ministerio de Econom\'ia y Competitividad. Duraci\'on: años 2014-2016. Importe: 53240 \texteuro.}
-\cvlistitem{[Proyecto auton\'omico] 09DPI-011118PR INCITE 2009. Dese\~no \'optimo de estruturas e compo\~nentes automobil\'isticos con materiais met\'alicos e compostos. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: años 2009-2012. Importe: 45000 \texteuro.}
-\cvlistitem{[Proyecto auton\'omico] 10DPI025CT. Hybrid-Body: optimizaci\'on estructural de un sistema h\'ibrido para absorci\'on de energ\'ia en choque frontal con comprobaci\'on experimental y computacional. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: años 2010-2012. Importe: 46000 \texteuro.}
-\cvlistitem{[Proyecto auton\'omico] GRC2013-056. Grupo de Referencia Competitiva. Conseller\'ia de Cultura, Educaci\'on e Ordenaci\'on Universitaria. Duraci\'on: años 2013-2016. Importe: 259000 \texteuro.}
-\cvlistitem{[Contratos de investigaci\'on con empresas] Con Puentes y Calzadas: C\'alculo s\'ismico en teor\'ia lineal y no lineal del puente sobre el r\'io Chiche en Ecuador. Ref. 443. Duraci\'on: ano 2013. Importe: 44504.77 \texteuro.}
-\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Optimization study of rear fuselage. Duraci\'on: ano 2015. Importe: 25561.26 \texteuro.}
-\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Duraci\'on: ano 2015. Importe: 24200 \texteuro.}
+\cvlistitem{[Proyecto europeo] FP7-AAT-2007-RTD-1. MAAXIMUS: More affordable Aircraft Structure through Extended, Integrated and Mature Numerical Sizing, UE, 03/2008-03/2013. Duraci\'on: a~nos 2011-2015. Importe: 370000 \texteuro.}
+\cvlistitem{[Proyecto nacional] UNCL13-1E-2123. T\'unel de viento de capa l\'imite para aplicaciones de ingenier\'ia civil y aeron\'autica. Ministerio de Econom\'ia y Competitividad. Duraci\'on: a~no 2014. Importe: 325000 \texteuro.}
+\cvlistitem{[Proyecto nacional] DURAPORT. Nuevas tecnolog\'ias para la construcci\'on de infraestructuras portuarias durables. CDTI, programa FEDER-INTERCONECTA, Ministerio de Econom\'ia y Competitividad, ref. 407.Duraci\'on: a~nos 2011-2012. Importe: 40000 \texteuro.}
+\cvlistitem{[Proyecto nacional] DPI 2013-41893-R. OPTOPAER. Optimizaci\'on probabilista topol\'ogica y topom\'etrica de estructuras aeron\'auticas en r\'egimen lineal y no lineal. Ministerio de Econom\'ia y Competitividad. Duraci\'on: a~nos 2014-2016. Importe: 53240 \texteuro.}
+\cvlistitem{[Proyecto auton\'omico] 09DPI-011118PR INCITE 2009. Dese\~no \'optimo de estruturas e compo\~nentes automobil\'isticos con materiais met\'alicos e compostos. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: a~nos 2009-2012. Importe: 45000 \texteuro.}
+\cvlistitem{[Proyecto auton\'omico] 10DPI025CT. Hybrid-Body: optimizaci\'on estructural de un sistema h\'ibrido para absorci\'on de energ\'ia en choque frontal con comprobaci\'on experimental y computacional. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: a~nos 2010-2012. Importe: 46000 \texteuro.}
+\cvlistitem{[Proyecto auton\'omico] GRC2013-056. Grupo de Referencia Competitiva. Conseller\'ia de Cultura, Educaci\'on e Ordenaci\'on Universitaria. Duraci\'on: a~nos 2013-2016. Importe: 259000 \texteuro.}
+\cvlistitem{[Contratos de investigaci\'on con empresas] Con Puentes y Calzadas: C\'alculo s\'ismico en teor\'ia lineal y no lineal del puente sobre el r\'io Chiche en Ecuador. Ref. 443. Duraci\'on: a~no 2013. Importe: 44504.77 \texteuro.}
+\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Optimization study of rear fuselage. Duraci\'on: a~no 2015. Importe: 25561.26 \texteuro.}
+\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Duraci\'on: a~no 2015. Importe: 24200 \texteuro.}
 
 \section{Patentes}
 \cvlistitem{Patente espa\~nola ES 2-386-269-B1: "Sitema h\'ibrido metal-composite para absorci\'on de energ\'ia en choque". Autores: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (Universidade da Coru\~na, UDC). 11 de julio de 2013.}
@@ -130,7 +130,7 @@ Modelado y an\'alisis computacional de tablestacas de fibra de vidrio.}
 \section{Asesoramiento cient\'ifico}
 \cvlistitem{Revisor de las revistas JCR \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites} y \emph{Engineering Optimization}.}
 
-\section{Asesoramingeniero de Caminos, Canales y Puertosento acad\'emico}
+\section{Asesoramiento acad\'emico}
 \cvlistitem{Miembro de la Comisi\'on de Reclamaciones de Plazas de PDI de la Universidade da Coru\~na, curso 2015-2016.}
 
 \end{document}
