--- a/CV-es.tex
+++ b/CV-es.tex
@@ -106,16 +106,16 @@ Modelado y an\'alisis computacional de tablestacas de fibra de vidrio.}
 %\clearpage\end{CJK*}                          % si esta redactando su CV en chino usando CJK, \clearpage es requerido por fancyhdr para que funcione correctamente con CJK, aunque esto eliminara la numeracion de pagina al dejar \lastpage como no definido
 
 \section{Participaci\'on en proyectos y contratos de investigaci\'on}
-\cvlistitem{[Proyecto europeo] FP7-AAT-2007-RTD-1. MAAXIMUS: More affordable Aircraft Structure through Extended, Integrated and Mature Numerical Sizing, UE, 03/2008-03/2013. Duraci\'on: a~nos 2011-2015. Importe: 370000 \texteuro.}
-\cvlistitem{[Proyecto nacional] UNCL13-1E-2123. T\'unel de viento de capa l\'imite para aplicaciones de ingenier\'ia civil y aeron\'autica. Ministerio de Econom\'ia y Competitividad. Duraci\'on: a~no 2014. Importe: 325000 \texteuro.}
-\cvlistitem{[Proyecto nacional] DURAPORT. Nuevas tecnolog\'ias para la construcci\'on de infraestructuras portuarias durables. CDTI, programa FEDER-INTERCONECTA, Ministerio de Econom\'ia y Competitividad, ref. 407.Duraci\'on: a~nos 2011-2012. Importe: 40000 \texteuro.}
-\cvlistitem{[Proyecto nacional] DPI 2013-41893-R. OPTOPAER. Optimizaci\'on probabilista topol\'ogica y topom\'etrica de estructuras aeron\'auticas en r\'egimen lineal y no lineal. Ministerio de Econom\'ia y Competitividad. Duraci\'on: a~nos 2014-2016. Importe: 53240 \texteuro.}
-\cvlistitem{[Proyecto auton\'omico] 09DPI-011118PR INCITE 2009. Dese\~no \'optimo de estruturas e compo\~nentes automobil\'isticos con materiais met\'alicos e compostos. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: a~nos 2009-2012. Importe: 45000 \texteuro.}
-\cvlistitem{[Proyecto auton\'omico] 10DPI025CT. Hybrid-Body: optimizaci\'on estructural de un sistema h\'ibrido para absorci\'on de energ\'ia en choque frontal con comprobaci\'on experimental y computacional. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: a~nos 2010-2012. Importe: 46000 \texteuro.}
-\cvlistitem{[Proyecto auton\'omico] GRC2013-056. Grupo de Referencia Competitiva. Conseller\'ia de Cultura, Educaci\'on e Ordenaci\'on Universitaria. Duraci\'on: a~nos 2013-2016. Importe: 259000 \texteuro.}
-\cvlistitem{[Contratos de investigaci\'on con empresas] Con Puentes y Calzadas: C\'alculo s\'ismico en teor\'ia lineal y no lineal del puente sobre el r\'io Chiche en Ecuador. Ref. 443. Duraci\'on: a~no 2013. Importe: 44504.77 \texteuro.}
-\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Optimization study of rear fuselage. Duraci\'on: a~no 2015. Importe: 25561.26 \texteuro.}
-\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Duraci\'on: a~no 2015. Importe: 24200 \texteuro.}
+\cvlistitem{[Proyecto europeo] FP7-AAT-2007-RTD-1. MAAXIMUS: More affordable Aircraft Structure through Extended, Integrated and Mature Numerical Sizing, UE, 03/2008-03/2013. Duraci\'on: a\~nos 2011-2015. Importe: 370000 \texteuro.}
+\cvlistitem{[Proyecto nacional] UNCL13-1E-2123. T\'unel de viento de capa l\'imite para aplicaciones de ingenier\'ia civil y aeron\'autica. Ministerio de Econom\'ia y Competitividad. Duraci\'on: a\~no 2014. Importe: 325000 \texteuro.}
+\cvlistitem{[Proyecto nacional] DURAPORT. Nuevas tecnolog\'ias para la construcci\'on de infraestructuras portuarias durables. CDTI, programa FEDER-INTERCONECTA, Ministerio de Econom\'ia y Competitividad, ref. 407.Duraci\'on: a\~nos 2011-2012. Importe: 40000 \texteuro.}
+\cvlistitem{[Proyecto nacional] DPI 2013-41893-R. OPTOPAER. Optimizaci\'on probabilista topol\'ogica y topom\'etrica de estructuras aeron\'auticas en r\'egimen lineal y no lineal. Ministerio de Econom\'ia y Competitividad. Duraci\'on: a\~nos 2014-2016. Importe: 53240 \texteuro.}
+\cvlistitem{[Proyecto auton\'omico] 09DPI-011118PR INCITE 2009. Dese\~no \'optimo de estruturas e compo\~nentes automobil\'isticos con materiais met\'alicos e compostos. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: a\~nos 2009-2012. Importe: 45000 \texteuro.}
+\cvlistitem{[Proyecto auton\'omico] 10DPI025CT. Hybrid-Body: optimizaci\'on estructural de un sistema h\'ibrido para absorci\'on de energ\'ia en choque frontal con comprobaci\'on experimental y computacional. Conseller\'ia de Econom\'ia e Industria. Duraci\'on: a\~nos 2010-2012. Importe: 46000 \texteuro.}
+\cvlistitem{[Proyecto auton\'omico] GRC2013-056. Grupo de Referencia Competitiva. Conseller\'ia de Cultura, Educaci\'on e Ordenaci\'on Universitaria. Duraci\'on: a\~nos 2013-2016. Importe: 259000 \texteuro.}
+\cvlistitem{[Contratos de investigaci\'on con empresas] Con Puentes y Calzadas: C\'alculo s\'ismico en teor\'ia lineal y no lineal del puente sobre el r\'io Chiche en Ecuador. Ref. 443. Duraci\'on: a\~no 2013. Importe: 44504.77 \texteuro.}
+\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Optimization study of rear fuselage. Duraci\'on: a\~no 2015. Importe: 25561.26 \texteuro.}
+\cvlistitem{[Contratos de investigaci\'on con empresas] Con AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Duraci\'on: a\~no 2015. Importe: 24200 \texteuro.}
 
 \section{Patentes}
 \cvlistitem{Patente espa\~nola ES 2-386-269-B1: "Sitema h\'ibrido metal-composite para absorci\'on de energ\'ia en choque". Autores: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (Universidade da Coru\~na, UDC). 11 de julio de 2013.}
