--- a/CV-es.tex
+++ b/CV-es.tex
@@ -92,7 +92,7 @@ Modelado y an\'alisis computacional de tablestacas de fibra de vidrio.}
 
 \nocite{*}
 \bibliographystyle{unsrt}
-\bibliography{publications_gl}                    % 'publications' es el nombre del archivo BibTeX
+\bibliography{publications_es}                    % 'publications' es el nombre del archivo BibTeX
 
 % Las publicaciones tomadas de un archivo BibTeX usando el paquete multibib
 %\section{Publicaciones}
@@ -122,7 +122,7 @@ Modelado y an\'alisis computacional de tablestacas de fibra de vidrio.}
 
 
 \section{Estancias de investigaci\'on}
-\cvlistitem{Estancia de investigaci\'on predoctoral desde el 1/10/2014 al 1/4/2015 (seis meses) en el Structural Impact Laboratory (NTNU, Trondheim, Noruega), bajo la direcci\'on de los profesores Magnus Langseth e David Morin.}
+\cvlistitem{Estancia de investigaci\'on predoctoral desde el 1/10/2014 al 1/4/2015 (seis meses) en el Structural Impact Laboratory (NTNU, Trondheim, Noruega), bajo la direcci\'on de los profesores Magnus Langseth y David Morin.}
 
 \section{Reconocimientos y premios}
 \cvlistitem{Becario de la Fundaci\'on Barri\'e y el Cl\'uster de Empresas da Automoci\'on de Galicia en la convocatoria de becas de posgrado 2014 para la realizaci\'on de una estancia predoctoral en la NTNU (Noruega).}
