--- a/CV-es.tex
+++ b/CV-es.tex
@@ -6,7 +6,7 @@
 % available at http://www.latex-project.org/lppl/.
 
 
-\documentclass[10pt,a4paper,sans]{moderncv}   % opciones posibles incluyen tama\~no de fuente ('10pt', '11pt' and '12pt'), tama\~no de papel ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' y 'landscape') y familia de fuentes ('sans' y 'roman')
+\documentclass[10pt,a4paper,sans]{moderncves}   % opciones posibles incluyen tama\~no de fuente ('10pt', '11pt' and '12pt'), tama\~no de papel ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' y 'landscape') y familia de fuentes ('sans' y 'roman')
 
 % temas de moderncv
 \moderncvstyle{classic}                        % las opciones de estilo son 'casual' (por omision),'classic', 'oldstyle' y 'banking'
