--- a/CV-en.tex
+++ b/CV-en.tex
@@ -110,7 +110,7 @@ Computational modeling of GFRP sheet-pile walls.}
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
 \section{Scientific advisory}
-\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites} and \emph{Engineering Optimization}.}
+\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization} and \emph{Computers and Structures}.}
 
 \end{document}
 
