--- a/publications_es.bib
+++ b/publications_es.bib
@@ -77,6 +77,14 @@ source={Scopus},
 
 }
 
+@conference{Costas_ICILSM,
+  Author = {Costas,M. and D\'iaz,J. and Romera,L. E. and Morin, D. and Langseth,M.},
+  Booktitle = {1st International Conference on Impact Loading of Structures and Materials (ICILSM), Turin (Italy)},
+  Document_Type = {Conference Paper},
+  Title = {Experimental characterization and numerical multi-objective optimization of the crashworthiness of aluminum extrusions filled with {PET} foam and {GFRP}},
+  Year = {2016},
+  }
+
 @conference{Costas_FISITA1,
   Author = {Romera, L. and Costas, M. and D\'iaz, J. and Paz, J. and Hern\'andez, S.},
   Booktitle = {35th FISITA World Automotive Congress, Maastrich (Netherlands)},
