--- a/CV-es.tex
+++ b/CV-es.tex
@@ -128,7 +128,7 @@ Modelado y an\'alisis computacional de tablestacas de fibra de vidrio.}
 \cvlistitem{Becario de la Fundaci\'on Barri\'e y el Cl\'uster de Empresas da Automoci\'on de Galicia en la convocatoria de becas de posgrado 2014 para la realizaci\'on de una estancia predoctoral en la NTNU (Noruega).}
 
 \section{Asesoramiento cient\'ifico}
-\cvlistitem{Revisor de las revistas JCR \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites} y \emph{Engineering Optimization}.}
+\cvlistitem{Revisor de las revistas JCR \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization} y \emph{Computers and Structures}.}
 
 \section{Asesoramiento acad\'emico}
 \cvlistitem{Miembro de la Comisi\'on de Reclamaciones de Plazas de PDI de la Universidade da Coru\~na, curso 2015-2016.}
