--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -77,6 +77,23 @@ source={Scopus},
 
 }
 
+@conference{Costas_portugal,
+  Author = {D\'iaz,J. and Romera,L. E. and Costas, M. and Paz, J.},
+  Booktitle = {ICCS19 - 19th International Conference on Composite Structures, Porto (Portugal)},
+  Document_Type = {Conference Paper},
+  Title = {Reliability-based crashworthiness optimization of hybrid metal-composite energy absorption devices},
+  Year = {2016},
+  }
+
+
+@conference{Costas_ICILSM,
+  Author = {Costas,M. and D\'iaz,J. and Romera,L. E. and Morin, D. and Langseth,M.},
+  Booktitle = {1st International Conference on Impact Loading of Structures and Materials (ICILSM), Turin (Italy)},
+  Document_Type = {Conference Paper},
+  Title = {Experimental characterization and numerical multi-objective optimization of the crashworthiness of aluminum extrusions filled with {PET} foam and {GFRP}},
+  Year = {2016},
+  }
+
 @conference{Costas_FISITA1,
   Author = {Romera, L. and Costas, M. and D\'iaz, J. and Paz, J. and Hern\'andez, S.},
   Booktitle = {35th FISITA World Automotive Congress, Maastrich (Netherlands)},
