--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -26,14 +26,14 @@
   year={2015},
 }
 
-@article{montoya2015multi,
-  title={A multi-objective reliability-based optimization of the crashworthiness of a metallic-{GFRP} impact absorber using hybrid approximations},
-  author={Montoya, M Cid and Costas, M and D{\'\i}az, J and Romera, LE and Hern{\'a}ndez, S},
-  journal={Structural and Multidisciplinary Optimization},
-  pages={1--17},
-  year={2015},
-  publisher={Springer}
-}
+@article{CidMontoya2015,
+  Author = {Cid Montoya, M. and Costas, M. and D{\'i}az, J. and Romera, L. E. and Hern{\'a}ndez, S.},
+  Journal = {Structural and Multidisciplinary Optimization},
+  Volume = {52},
+  Number = {4},
+  Pages = {827-843},
+  Title = {A multi-objective reliability-based optimization of the crashworthiness of a metallic-{GFRP} impact absorber using hybrid approximations},
+  Year = {2015}}
 
 
 @article{Paz201430,
