--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -105,6 +105,9 @@
 \cvlistitem{[RD project with industrial partner] With AIRBUS: Optimization study of rear fuselage. Year 2015. Budget: 25561.26 \texteuro.}
 \cvlistitem{[RD project with industrial partner] With AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Year 2015. Budget: 24200 \texteuro.}
 
+\section{RD fundraising}
+\cvlistitem{[National project] DPI2016-76934-R. Probabilistic optimization of intact and damaged aeronautical structures under dynamic and impact loading. Spanish Ministry of Economy and Competitiveness. Year 2016. Budget: 111600 \texteuro.}
+
 \nocite{*}
 \bibliographystyle{unsrt}
 \bibliography{publications_en}                    % 'publications' es el nombre del archivo BibTeX
