--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -107,6 +107,7 @@
 
 \section{RD fundraising}
 \cvlistitem{[National project] DPI2016-76934-R. Probabilistic optimization of intact and damaged aeronautical structures under dynamic and impact loading. Spanish Ministry of Economy and Competitiveness. Year 2016. Budget: 111600 \texteuro.}
+\vspace{3mm}
 
 \nocite{*}
 \bibliographystyle{unsrt}
