--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -106,7 +106,7 @@
 \cvlistitem{[RD project with industrial partner] With AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Year 2015. Budget: 24200 \texteuro.}
 
 \section{RD fundraising}
-\cvlistitem{[National project] DPI2016-76934-R. Probabilistic optimization of intact and damaged aeronautical structures under dynamic and impact loading. Spanish Ministry of Economy and Competitiveness. Year 2016. Budget: 111600 \texteuro.}
+\cvlistitem{[National project] DPI2016-76934-R. OPTISAFE. Probabilistic optimization of intact and damaged aeronautical structures under dynamic and impact loading. Spanish Ministry of Economy and Competitiveness. Year 2016. Budget: 111600 \texteuro.}
 \vspace{3mm}
 
 \nocite{*}
