--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -94,6 +94,14 @@ source={Scopus},
   Year = {2016},
   }
 
+@conference{Costas_portugal2,
+  Author = {D\'iaz, J. and Romera, L. E. and Paz, J. and Costas, M.},
+  Booktitle = {ICCS18 - 18th International Conference on Composite Structures, Lisbon (Portugal)},
+  Document_Type = {Conference Paper},
+  Title = {Crashworthiness optimization of metal-composite energy absorption devices},
+  Year = {2015},
+  }
+
 @conference{Costas_FISITA1,
   Author = {Romera, L. and Costas, M. and D\'iaz, J. and Paz, J. and Hern\'andez, S.},
   Booktitle = {35th FISITA World Automotive Congress, Maastrich (Netherlands)},
