--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -85,6 +85,16 @@ source={Scopus},
   Year = {2016},
   }
 
+@conference{Costas_trash,
+  Author = {Romera, L. and Pire, L. and Costas, M. and Paz, J. and D\'iaz, J. and Hern\'andez, S.},
+  Booktitle = {HPSM/OPTI 2016, International Conference on High Performance and Optimum Design of Structures and Materials. Siena (Italy)},
+  Document_Type = {Conference Paper},
+  Owner = {mcostas},
+  Source = {Scopus},
+  Timestamp = {2012.07.23},
+  Title = {{Improvement of crash forces in structures using optimization tools}},
+  Year = {2016},
+  }
 
 @conference{Costas_ICILSM,
   Author = {Costas,M. and D\'iaz,J. and Romera,L. E. and Morin, D. and Langseth,M.},
