--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -58,13 +58,14 @@
 
 \section{Work history}
 
-\cventry{2016--Present}{Postdoctoral researcher}{Structural Mechanics group, University of A Coru\~na}{}{}{}
+\cventry{2017--Present}{Postdoctoral researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
+\cventry{2016}{Postdoctoral researcher}{Structural Mechanics group, University of A Coru\~na}{}{}{}
 \cventry{2011--2015}{RD engineer and PhD candidate}{Structural Mechanics group, University of A Coru\~na}{}{}{(Please find a list of RD projects on the upcoming pages).}
-\cventry{Summer of 2009}{Internship}{Port Authority of Vilagarc\'ia de Arousa (Puertos del Estado)}{}{}{Support tasks at the infrastructures management board.}
+\cventry{Summer 2009}{Internship}{Port Authority of Vilagarc\'ia de Arousa (Puertos del Estado)}{}{}{}
 
 \section{Teaching experience}
-\cventry{Academic year 2015-2016}{Teacher of 'Advanced structural analysis' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, University of A Coruña}{}{}{}
-\cventry{Academic year 2013-2014}{Assistant in the practical training of the subject 'Bridges 1'}{School of Civil Engineering, University of A Coruña}{}{}{}
+\cventry{2015-Present}{Teacher of 'Advanced structural analysis' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
+\cventry{2013-2014}{Assistant in the practical training of the subject 'Bridges 1'}{School of Civil Engineering, UDC}{}{}{}
 
 \section{Languages}
 \cvitemwithcomment{Spanish}{Native}{}
