--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -28,9 +28,9 @@
 \firstname{Miguel}
 \familyname{Costas Pi\~{n}\'o}
 \title{Curriculum Vitae, updated \today}
-\address{Calle Albari\~{n}o, 24, 2$^\circ$}{36630 - Cambados (Galicia) - Spain} % dato opcional, elimine la linea si no desea el dato
-\mobile{(+34)~660~784~672}                            % dato opcional, elimine la linea si no desea el dato
-\email{miguel.costas@udc.es}                                 % dato opcional, elimine la linea si no desea el dato
+\address{Presteg\r{a}rdsvegen 5}{7051 - Trondheim, Norway} % dato opcional, elimine la linea si no desea el dato
+\mobile{(+47)~469~67~251\\(+34)~660~784~672\\}
+\email{miguel.costas@ntnu.no}                                 % dato opcional, elimine la linea si no desea el dato
 \extrainfo{Birth date: 11.28.1987}                    % dato opcional, elimine la linea si no desea el dato
 \photo[64pt][0pt]{foto_yo}                          % '64pt' es la altura a la que la imagen debe ser ajustada, 0.4pt es grosor del marco que lo contiene (eliga 0pt para eliminar el marco) y 'picture' es el nombre del archivo; dato opcional, elimine la linea si no desea el dato
 
@@ -73,7 +73,7 @@
 \cvitemwithcomment{English}{Full professional proficiency, level C1}{Certificate in Advanced English, Cambridge University. 2012.}
 \cvitemwithcomment{French}{Basic professional proficiency, level B1}{}
 \cvitemwithcomment{Portuguese}{Basic professional proficiency}{}
-\cvitemwithcomment{Norwegian}{Basic skills}{Official A1 certificate (Bokm\r{a}l)}
+\cvitemwithcomment{Norwegian}{Basic professional proficiency, level B1}{Official B1 certificate (Bokm\r{a}l)}
 
 \section{Computation skills}
 \cvitem{Structural analysis}{Structural analysis with Abaqus Standard and Explicit. Experience in explicit crash simulations, including plasticity and failure models for metals and composites, contacts, joints, etc. Experience with Python scripts for pre and post-processing. Other software: Ansys, SAP2000, Cosmos/M.}
