--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -6,6 +6,13 @@
 
 }
 
+@ARTICLE{costas2017axial,
+  author = {Costas, M. and Morin, D. and Langseth, M. and D{\'\i}az, J. and Romera, L.},
+  title = {Static crushing of aluminium extrusions filled with {PET} foam and {GFRP}. {Numerical} modelling and multiobjective optimization. {{\textbf{Submitted after peer review, publication inminent}}}},
+  journal = {International Journal of Mechanical Sciences},
+  year = {2017},
+}
+
 @ARTICLE{costas2016axial,
   author = {Costas, M. and Morin, D. and Langseth, M. and Romera, L. and D{\'\i}az,
   J.},
